--- a/player.html
+++ b/player.html
@@ -1,4 +1,16 @@
 <meta charset="UTF-8" name="viewport" content="width=device-width">
 <link rel="stylesheet" href="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.css">
+<meting-js
+        id="3175833810"
+        lrc-type="0"
+        server="netease"
+        order="list"
+        type="playlist"
+        fixed="true"
+        list-olded="true"
+        autoplay="true"
+        mutex="true"
+        >
+</meting-js>
 <script src="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.js"></script>
-<div id="aplayer"></div>
+<script src="https://unpkg.com/meting@2.0.1/dist/Meting.min.js"></script>
