--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="markdown.css">
         <link rel="stylesheet" type="text/css" href="font.css">
         <link rel="stylesheet" type="text/css" href="post.css">
+        <link rel="stylesheet" href="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.css">
         <link rel="manifest" href="manifest.json" />
 
         <!-- 玩玩PWA -->
@@ -167,7 +168,19 @@
                     <a href="image.png"><img class="gd-rc gd-shadow-20 gd-shadow-h-5 gd-box-margin-20" src="./nman.png" width="100%" height="100%" alt="大爱柠檬（广告）"></a>
                 </div>
             </div>
-            
+
+            <meting-js
+                id="3175833810"
+                lrc-type="0"
+                server="netease"
+                order="list"
+                type="playlist"
+                fixed="true"
+                list-olded="true"
+                autoplay="true"
+                mutex="true"
+                >
+            </meting-js>
         </div>
 
         <!-- 网页遮盖 -->
@@ -177,7 +190,13 @@
         <script src="./main.js"></script>
         <!-- <script src="./langmain.js"></script> <script src="./langcon.js"></scrip> -->
         <script src="./wel.js"></script>
+
         <!-- tidio -->
         <script src="//code.tidio.co/6dto8kyviklqvdz7hzplghpoo77c2wsw.js" async></script>
+
+        <!-- APlayer -->
+        <script src="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.js"></script>
+        <script src="https://unpkg.com/meting@2.0.1/dist/Meting.min.js"></script>
+
     </body>
 </html>
