--- a/index.html
+++ b/index.html
@@ -136,18 +136,6 @@
                 </div>
             </div>
 
-            <!-- 音乐版块 -->
-            <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
-                <div class="gd-article">
-                    <h3>听首音乐？</h3>
-                    <!-- 感谢网易云音乐提供支持 -->
-                    <iframe name="myf"></iframe>
-                    <audio id="musicau"></audio>
-                    <br/><div class="thanks" id="thanks"></div>
-                    <button onclick="musicc418();" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">换一首</button>
-                </div>
-            </div>
-
             <!-- 末尾 -->
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
                 <div class="gd-article">
@@ -169,6 +157,7 @@
                 </div>
             </div>
 
+            <!-- APlayer -->
             <meting-js
                 id="3175833810"
                 lrc-type="0"
@@ -194,7 +183,7 @@
         <!-- tidio -->
         <script src="//code.tidio.co/6dto8kyviklqvdz7hzplghpoo77c2wsw.js" async></script>
 
-        <!-- APlayer -->
+        <!-- APlayer引入 -->
         <script src="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.js"></script>
         <script src="https://unpkg.com/meting@2.0.1/dist/Meting.min.js"></script>
 
