--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 type="playlist"
                 fixed="true"
                 list-olded="true"
-                autoplay="true"
+                autoplay="false"
                 mutex="true"
                 >
             </meting-js>
