--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 
         <script src="./jquery.min.js"></script>
         <script src="./ie.js"></script>
+        
+        <!-- 遮罩层需要 -->
+        <style>
+            body{}
+        </style>
     </head>
     <body style="background-color:rgb(247,249,250)" onload="test();">
 
