--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
             <a href="javascript:GoodEmail();" class="lianjie"><li class="gd-rc-1 gd-h" id="idGoodEmail"><del>伊妹儿</del>Email</li></a>
             <a href="javascript:FuckQQ();"><li class="gd-rc-1 gd-h" id="idFuckQQ">QQ</li></a>       
             <hr><t>广告</t>
-            <a href="image.png"><img class="gd-rc gd-shadow-20 gd-shadow-h-5 gd-box-margin-20" src="./nman.png" width="100%" height="100%" alt="大爱柠檬（广告）"></a>
         </div>
 
         <!-- 网站内容 -->
@@ -153,21 +152,27 @@
                 </div>
             </div>
 
+            <!-- 柠檬的广告，我要谢谢柠檬~ -->
+            <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
+                <div class="gd-article">
+                    <a href="image.png"><img class="gd-rc gd-shadow-20 gd-shadow-h-5 gd-box-margin-20" src="./nman.png" width="100%" height="100%" alt="大爱柠檬（广告）"></a>
+                </div>
+            </div>
 
-            <!-- APlayer -->
-            <meting-js
-                id="867465661"
-                lrc-type="0"
-                server="netease"
-                order="list"
-                type="playlist"
-                fixed="true"
-                list-olded="true"
-                autoplay="false"
-                mutex="true"
-                >
-            </meting-js>
         </div>
+
+        <!-- APlayer -->
+        <meting-js
+            id="867465661"
+            lrc-type="0"
+            server="netease"
+            order="list"
+            type="playlist"
+            fixed="true"
+            list-olded="true"
+            autoplay="false"
+            mutex="true"
+        ></meting-js>
 
         <!-- 网页遮盖 -->
         <div class="gd-overlay" id="overlay"></div>
