--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             </t>
             <a href="https://www.imfmkli.top" class="lianjie"><li class="gd-rc-1 gd-h">鸽子の主页</li></a>
             <a href="https://blog.imfmkli.top" class="lianjie"><li class="gd-rc-1 gd-h">鸽のBlog</li></a>
+            <a href="https://www.imfmkli.top/talk2.html" class="lianjie"><li class="gd-rc-1 gd-h">鸽の留言板</li></a>
+            <a href="https://www.imfmkli.top/say.html" class="lianjie"><li class="gd-rc-1 gd-h">鸽の说说</li></a>
             <a href="https://fmkli.github.io/Privacy-policy/" class="lianjie"><li class="gd-rc-1 gd-h">隐私政策</li></a>
             <hr><t>随便搞的</t>
             <a href="https://www.imfmkli.top/website%20navigation/" class="lianjie"><li class="gd-rc-1 gd-h">网址导航</li></a>
@@ -104,20 +106,6 @@
                 </div>
                 <hr>
 
-                <!-- 留言板 -->
-                <div class="gd-article">
-                    <h3>留言</h3>
-                    <p>发布留言时，请遵守法律法规，禁止发布违法违规及政治相关内容；<br>请友好评论，保持对他人的尊重；<br>严禁发布广告；</p>
-                    <a href="https://www.imfmkli.top/talk2.html" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">加载留言系统</a>
-                </div>
-                <hr>
-
-                <!-- 说说 -->
-                <div class="gd-article">
-                    <h3>说说</h3>
-                    <p>由于jsd拖慢网站速度，说说跳转去另一个页面</p>
-                    <a href="https://www.imfmkli.top/say.html" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">加载说说</a>
-                </div>
             </div>
 
             <!-- 文章板块 -->
@@ -184,7 +172,7 @@
         <!-- tidio -->
         <script src="//code.tidio.co/6dto8kyviklqvdz7hzplghpoo77c2wsw.js" async></script>
 
-        <!-- APlayer引入 -->
+        <!-- APlayer引入（ -->
         <script src="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.js"></script>
         <script src="https://unpkg.com/meting@2.0.1/dist/Meting.min.js"></script>
 
