--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                       </article>
                 </div>
                 <hr>
+                <h3>留言板及说说的入口已经搬迁到抽屉栏</h3>
 
             </div>
 
