--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <h3>公告</h3>
                     <article class="markdown-body">
                           <ul>
-                            <li>这屑网站居然有公告！奇迹！奇迹！</li>
+                            <li>留言板及说说的入口已经搬迁到抽屉栏</li>
                           </ul>
                       </article>
                 </div>
@@ -132,11 +132,15 @@
                 
                 <!-- 博客文章入口 -->
                 <hr>
-                <a href="javascript:openlist();" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">点我查看博客文章</a>
+                <div class="gd-article">
+                    <h3>About</h3>
+                    <article class="markdown-body">
+                          <ul>
+                              <a href="javascript:openlist();" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">点我查看博客文章</a>
+                          </ul>
+                      </article>
+                </div>
                 
-                <hr>
-                <h3>留言板及说说的入口已经搬迁到抽屉栏</h3>
-
             </div>
 
 
