--- a/index.html
+++ b/index.html
@@ -133,12 +133,10 @@
                 <!-- 博客文章入口 -->
                 <hr>
                 <div class="gd-article">
-                    <h3>About</h3>
+                    <h3>博客文章入口</h3>
                     <article class="markdown-body">
-                          <ul>
-                              <a href="javascript:openlist();" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">点我查看博客文章</a>
-                          </ul>
-                      </article>
+                         <a href="javascript:openlist();"><li class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">点我查看博客文章</li></a>
+                    </article>
                 </div>
                 
             </div>
