--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     <a href="javascript:closelist();">&times;</a>
                     <!-- 关闭按钮.End -->
                 </div>
-                <span>文章列表</span>
+                <h2>文章列表</h2>
+                <p>默认只显示五篇文章</p>
                 <!-- 内容 -->
                 <div class="contain">
                     <!-- 来源：blog.imfmkli.top -->
