--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                         </div>
                         <div id="posts-stop"></div>
                         <a href="https://blog.imfmkli.top/" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">查看更多</a>
+                        <iframe width="auto" height="auto" id="postiframe"></iframe>
                     </div>
                 </div>
             </div>
