--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div id="posts-stop"></div>
                         <a href="https://blog.imfmkli.top/" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">查看更多</a>
                         <a href="https://blog.imfmkli.top/atom.xml" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">博客的RSS</a>
-                        <iframe src="" style="display: none;"></iframe>
+                        <iframe src="" style="display: none;" id="postshow"></iframe>
                     </div>
                 </div>
             </div>
