--- a/index.html
+++ b/index.html
@@ -33,11 +33,6 @@
         <div class="dailong" id="card" style="display:none;">
             <!-- 列表内容 -->
             <div class="postlist2">
-                <div class="listheader">
-                    <!-- 关闭按钮 -->
-                    <a href="javascript:closelist();">&times;</a>
-                    <!-- 关闭按钮.End -->
-                </div>
                 <h2>文章列表</h2>
                 <p>默认只显示五篇文章</p>
                 <hr>
@@ -51,6 +46,7 @@
                         <div id="posts-stop"></div>
                         <a href="https://blog.imfmkli.top/" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">查看更多</a>
                         <a href="https://blog.imfmkli.top/atom.xml" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">博客的RSS</a>
+                        <a href="javascript:closelist();" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">关闭！</a>
                         <br>
                         <iframe src="" style="display: none;" id="postshow" width="100%" height="700px"></iframe>
                     </div>
