--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                         <a href="javascript:closelist();" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">关闭！</a>
                         <br>
                         <iframe src="" style="display: none;" id="postshow" width="100%" height="700px"></iframe>
+                        <div id="closebutton">
+                        </div>
                     </div>
                 </div>
             </div>
