--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     
         <!-- 文章弹窗 -->
         <!-- 遮罩层 -->
-        <div class="dailong" id="card" style="display:none;">
+        <div class="dailong zhezhaoceng" id="card" style="display:none;">
             <!-- 列表内容 -->
-            <div class="postlist2">
+            <div class="postlist2 wenzhang">
                 <h2>文章列表</h2>
                 <p>默认只显示五篇文章</p>
                 <hr>
