--- a/say.html
+++ b/say.html
@@ -20,6 +20,7 @@
 		    <div id="artitalk_main"></div>
 		    <script>
 			new Artitalk({
+                            serverURL: 'https://lean.imfmkli.top',
     			    appId: 'tcAamuaemtpiPweN3TJVFsGY-MdYXbMMI', // Your LeanCloud appId
     			    appKey: 'ylUKdWRkCrRiGxO4uQf6D1Ft' // Your LeanCloud appKey
 			})
