--- a/index.html
+++ b/index.html
@@ -193,5 +193,16 @@
         <!-- APlayer引入（ -->
         <script src="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.js"></script>
         <script src="https://unpkg.com/meting@2.0.1/dist/Meting.min.js"></script>
+
+        <!-- V ME 50 ! -->
+        <script>
+            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
+            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
+            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
+            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
+            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
+            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
+            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
+        </script>
     </body>
 </html>
