--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- V我50 https://www.vwo50.com/donate/xGRuJ -->
 <!DOCTYPE html>
 <html lang="zh-CN">
     <head>
@@ -115,6 +116,7 @@
                     <article class="markdown-body">
                           <ul>
                             <li>留言板及说说的入口已经搬迁到抽屉栏</li>
+                            <li>V我50！ <a href="https://www.vwo50.com/donate/xGRuJ">https://www.vwo50.com/donate/xGRuJ</a></li>
                           </ul>
                       </article>
                 </div>
@@ -194,15 +196,5 @@
         <script src="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.js"></script>
         <script src="https://unpkg.com/meting@2.0.1/dist/Meting.min.js"></script>
 
-        <!-- V ME 50 ! -->
-        <script>
-            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
-            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
-            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
-            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
-            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
-            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
-            console.log('TNND光速V我50---https://www.vwo50.com/donate/xGRuJ');
-        </script>
     </body>
 </html>
