--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
                     <h3>公告</h3>
                     <article class="markdown-body">
                           <ul>
-                            <li>留言板及说说的入口已经搬迁到抽屉栏</li>
-                            <li>V我50！ <a href="https://www.vwo50.com/donate/xGRuJ">https://www.vwo50.com/donate/xGRuJ</a></li>
+                              <li>留言板及说说的入口已经搬迁到抽屉栏</li>
+                              <li>V我50！ <a href="https://www.vwo50.com/donate/xGRuJ">https://www.vwo50.com/donate/xGRuJ</a></li>
+                              <li>AHdark我爱你（谢谢你的20</li>
                           </ul>
                       </article>
                 </div>
