--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             </t>
             <a href="https://www.imfmkli.top" class="lianjie"><li class="gd-rc-1 gd-h">鸽子の主页</li></a>
             <a href="https://blog.imfmkli.top" class="lianjie"><li class="gd-rc-1 gd-h">鸽のBlog</li></a>
+            <a href="https://blog2.imfmkli.top" class="lianjie"><li class="gd-rc-1 gd-h">鸽の副Blog</li></a>
             <a href="https://www.imfmkli.top/talk2.html" class="lianjie"><li class="gd-rc-1 gd-h">鸽の留言板</li></a>
             <a href="https://www.imfmkli.top/say.html" class="lianjie"><li class="gd-rc-1 gd-h">鸽の说说</li></a>
             <a href="https://fmkli.github.io/Privacy-policy/" class="lianjie"><li class="gd-rc-1 gd-h">隐私政策</li></a>
