--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <meta name="description" content="菜菜鸽子的主页，来吧来吧~"/>
         <title>鸽子主页</title>
         <link rel="stylesheet" type="text/css" href="./css/style.css">
-        <link rel="stylesheet" type="text/css" href="./js/index.js">
 
         <!-- 拒绝IE浏览器访问！ -->
         <script src="./ie.js"></script>
@@ -47,6 +46,14 @@
                         <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
                         <br>Friend Links：<a href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a href="https://boblive.vercel.app/">BOB实况</a>--<a href="https://www.zxqblog.cn/">小钊的博客</a>
                         <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
+                    </div>
+                    <hr>
+                    <div class="header2333">
+                        我来说说：
+                        <br>本网页由Fmkli纯手敲制作，其中引用了一些图标资源，如侵权，请联系删除
+                        <br>同时欢迎大家提意见━(*｀∀´*)ノ亻!
+                        <br>本站虽丑，但又不是不能用（得意
+                        <br>
                     </div>
                 </div>
                 <div class="right">
@@ -90,11 +97,6 @@
 
         </div>
         <br><br><br>
-        <div class="header2333">
-            欢迎访问本站
-            <br>本站由Fmkli纯手打出来的，欢迎提出建议
-            <br>本站虽丑，但又不是不能用
-        </div>
         <script src="./js/index.js"></script>
     </body>
 </html>
