--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="header2333 oncard2">
                         Copyright &copy; 2022 Fmkli. All rights reserved.
                         <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
-                        <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
+                        <br><span id="timeDate2">载入天数...</span><span id="times2">载入时分秒...</span>
                         <br>Friend Links：<a href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a href="https://boblive.vercel.app/">BOB实况</a>--<a href="https://www.zxqblog.cn/">小钊的博客</a>
                         <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
                     </div>
