--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
         <meta name="apple-mobile-web-app-status-bar" content="#fdfdfd" />
         <meta name="theme-color" content="#c1e4e3" />
         <!-- 玩玩PWA.End-->
-
-        <!-- 播放器css -->
-        <link rel="stylesheet" href="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.css">
     </head>
     <body>
         <!-- 网站 主要内容-->
@@ -126,24 +123,9 @@
 
         </div>
 
-        <!-- APlayer -->
-        <meting-js
-            id="7547597075"
-            lrc-type="0"
-            server="netease"
-            order="list"
-            type="playlist"
-            fixed="true"
-            mini="true"
-            list-olded="true"
-            autoplay="false"
-            mutex="true"
-        ></meting-js>
 
         <!-- JS引入 -->
         <script src="./js/index.js"></script>
-        <!-- APlayer引入（ -->
-        <script src="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.js"></script>
-        <script src="https://unpkg.com/meting@2.0.1/dist/Meting.min.js"></script>
+        <script src="https://myhkw.cn/api/player/1650622827168" id="myhk" key="1650622827168" m="1"></script>
     </body>
 </html>
