--- a/index.html
+++ b/index.html
@@ -126,6 +126,6 @@
 
         <!-- JS引入 -->
         <script src="./js/index.js"></script>
-        <script src="https://myhkw.cn/api/player/1650622827168" id="myhk" key="1650622827168" m="1"></script>
+        <script id="myhk" src="https://myhkw.cn/api/player/1650622827168" key="1650622827168"></script>
     </body>
 </html>
