--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <br>由于我太菜了，只能做成这样了（伤心
                         <br>
                     </div>
-                    <hr>
+                    <hr class="oncard1">
                     <!-- APlayer -->
                     <meting-js
                         id="7547597075"
@@ -84,6 +84,7 @@
                         list-olded="true"
                         autoplay="false"
                         mutex="true"
+                        listFolded="true"
                     ></meting-js>
                 </div>
                 <!-- 盒子1.End-->
