--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         list-olded="true"
                         autoplay="false"
                         mutex="true"
-                        listFolded="true"
+                        list-folded="true"
                     ></meting-js>
                 </div>
                 <!-- 盒子1.End-->
