--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     <hr>
                     <div class="header2333">
                         我来说说：
-                        <br>本网页由Fmkli纯手敲制作，其中引用了一些图标资源，如侵权，请联系删除
+                        <br>本网页由Fmkli纯手敲制作，其中引用了一些图标资源，字体资源，如侵权，请联系删除
                         <br>同时欢迎大家提意见━(*｀∀´*)ノ亻!
                         <br>本站虽丑，但又不是不能用（得意
-                        <br>由于我太菜了，只能做成这样了（伤心
+                        <br>本背景图片来自于原罪！
                         <br>
                     </div>
                     <hr class="oncard1">
