--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script src="./ie.js"></script>
 
         <!-- Jquery引入 -->
-        <script src="./jquery.min.js"></script>
+        <script src="https://www.imfmkli.top/jquery.min.js"></script>
 
         <!-- PWA -->
         <link rel="manifest" href="manifest.json" />
@@ -61,6 +61,7 @@
                         Copyright &copy; 2022 Fmkli. All rights reserved.
                         <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
                         <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
+                        <br><span id="lasttime">载入倒计时...</span>
                         <br>Friend Links：<a href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a href="https://boblive.vercel.app/">BOB实况</a>--<a href="https://www.zxqblog.cn/">小钊的博客</a>
                         <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
                     </div>
@@ -130,6 +131,7 @@
                         Copyright &copy; 2022 Fmkli. All rights reserved.
                         <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
                         <br><span id="timeDate2">载入天数...</span><span id="times2">载入时分秒...</span>
+                        <br><span id="lasttime2">载入倒计时...</span>
                         <br>Friend Links：<a href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a href="https://boblive.vercel.app/">BOB实况</a>--<a href="https://www.zxqblog.cn/">小钊的博客</a>
                         <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
                     </div>
