--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         我来说说：
                         <br>本网页由Fmkli纯手敲制作，其中引用了一些图标资源，字体资源，如侵权，请联系删除
                         <br>同时欢迎大家提意见━(*｀∀´*)ノ亻!
-                        <br>本站虽丑，但又不是不能用（得意
+                        <br>本站虽丑，但又不是不能用
                         <br>本背景图片来自于原罪！
                         <br>
                     </div>
