--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!-- V我50 https://www.vwo50.com/donate/xGRuJ -->
+<!--
+声明：
+主页随便偷，标上Fmkli做的就行了
+-->
 <!DOCTYPE html>
 <html lang="zh-CN">
     <head>
@@ -7,7 +11,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="菜菜鸽子的主页，来吧来吧~"/>
         <title>鸽子主页</title>
-        
+
+        <!-- 加载页面 -->
+        <script src="./js/head.js"></script>
+
         <!-- CSS引入 -->
         <link rel="stylesheet" type="text/css" href="./css/style.css">
         <link rel="stylesheet" href="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.css">
@@ -32,6 +39,11 @@
         <!-- 玩玩PWA.End-->
     </head>
     <body>
+        <!-- 未开启javascript -->
+        <noscript>
+            <div class="noscript dailong"><h1 style="color: black;">请开启 JavaScript 方可正常使用</h1></div>
+        </noscript>
+
         <!-- 网站 主要内容-->
         <div class="background">
             <div class="shuanglan">
