--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <body>
         <!-- 未开启javascript -->
         <noscript>
-            <div class="noscript dailong"><h1 style="color: black;">请开启 JavaScript 方可正常使用</h1></div>
+            <div class="dailong"><div class="noscript"><h1 style="color: black;">请开启 JavaScript 方可正常使用</h1></div></div>
         </noscript>
 
         <!-- 网站 主要内容-->
