--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <script src="https://www.imfmkli.top/jquery.min.js"></script>
 
         <!-- PWA -->
-        <link rel="manifest" href="manifest.json" />
+        <link rel="manifest" href="https://www.imfmkli.top/manifest.json" />
         <!-- 玩玩PWA -->
         <!-- ios support -->
         <link rel="apple-touch-icon" href="images/icons/128.png" />
@@ -49,8 +49,8 @@
             <div class="shuanglan">
                 <!-- 盒子1 -->
                 <div class="left">
-                    <img class="headimg" src="./image/username.png">
-                    <br><img class="headimg urlimg" src="./image/url.png">
+                    <img class="headimg" src="./image/username.png" alt="Fmkli">
+                    <br><img class="headimg urlimg" src="./image/url.png" alt="www.imfmkli.top">
                     <hr>
                     <div class="content">
                         <h2 class="center">Fmkliの鸽子窝</h2>
