--- a/talk2.html
+++ b/talk2.html
@@ -22,7 +22,7 @@
     Waline.init({
       el: '#waline',
       serverURL: 'https://waline.imfmkli.top/',
-      requiredMeta: '['nick', 'mail']',
+      requiredMeta: "['nick', 'mail']",
     });
   </script>
 
