--- a/talk2.html
+++ b/talk2.html
@@ -22,6 +22,7 @@
     Waline.init({
       el: '#waline',
       serverURL: 'https://waline.imfmkli.top/',
+      requiredMeta: ['nick', 'mail']
     });
   </script>
 
