--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <!-- 加载页面 -->
         <script src="./js/head.js"></script>
 
+        <!-- JSON -->
+        <link rel="manifest" href="manifest.json" />
+
         <!-- CSS引入 -->
         <link rel="stylesheet" type="text/css" href="./css/style.css">
         <link rel="stylesheet" href="https://unpkg.com/aplayer@1.10.1/dist/APlayer.min.css">
@@ -25,8 +28,6 @@
         <!-- Jquery引入 -->
         <script src="https://www.imfmkli.top/jquery.min.js"></script>
 
-        <!-- PWA -->
-        <link rel="manifest" href="https://www.imfmkli.top/manifest.json" />
         <!-- 玩玩PWA -->
         <!-- ios support -->
         <link rel="apple-touch-icon" href="images/icons/128.png" />
