--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script src="./js/head.js"></script>
 
         <!-- JSON -->
-        <link rel="manifest" href="manifest.json" />
+        <link rel="manifest" href="/manifest.json">
 
         <!-- CSS引入 -->
         <link rel="stylesheet" type="text/css" href="./css/style.css">
