--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!-- V我50 https://www.vwo50.com/donate/xGRuJ -->
 <!--
-声明：
-主页随便偷，标上Fmkli做的就行了
+    声明：
+    主页随便偷，标上Fmkli做的就行了
+-->
+<!--
+    主页开坑于2022.8.7
 -->
 <!DOCTYPE html>
 <html lang="zh-CN">
