--- a/say.html
+++ b/say.html
@@ -14,16 +14,56 @@
 
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-		    <!-- 引用 artitalk -->
-		    <script type="text/javascript" src="https://unpkg.com/artitalk"></script>
-		    <!-- 存放说说的容器 -->
-		    <div id="artitalk_main"></div>
-		    <script>
-			new Artitalk({
-                            serverURL: 'https://lean.imfmkli.top',
-    			    appId: 'tcAamuaemtpiPweN3TJVFsGY-MdYXbMMI', // Your LeanCloud appId
-    			    appKey: 'ylUKdWRkCrRiGxO4uQf6D1Ft' // Your LeanCloud appKey
-			})
-		    </script>
+<div id="tip" style="text-align:center;">ipseak加载中</div>
+<div id="ispeak"></div>
+<link
+  rel="stylesheet"
+  href="https://cdn.staticfile.org/highlight.js/10.6.0/styles/atom-one-dark.min.css"
+/>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/ispeak@4.2.0/style.css"
+/>
+
+<style>
+  #article-container .D-avatar {
+    margin: 0 10px 0 0;
+  }
+  .D-footer {
+    display: none;
+  }
+</style>
+<script src="https://cdn.staticfile.org/highlight.js/10.6.0/highlight.min.js"></script>
+<script src="https://cdn.staticfile.org/marked/2.0.0/marked.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/discuss/dist/Discuss.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/ispeak@4.2.0/ispeak.umd.js"></script>
+<script>
+  var head = document.getElementsByTagName('head')[0]
+  var meta = document.createElement('meta')
+  meta.name = 'referrer'
+  meta.content = 'no-referrer'
+  head.appendChild(meta)
+  if (ispeak) {
+    ispeak
+      .init({
+        el: '#ispeak',
+        api: 'https://kkapi-dev.vercel.app/',
+        author: '61fe93508fd621d39a155725',
+        pageSize: 10,
+        loading_img: 'https://7.dusays.com/2021/03/04/d2d5e983e2961.gif',
+        initCommentName: 'Discuss',
+        initCommentOptions: {
+          serverURLs: 'https://kkdiscuss.vercel.app/'
+        }
+      })
+      .then(function () {
+        console.log('ispeak 加载完成')
+        document.getElementById('tip').style.display = 'none'
+      })
+  } else {
+    document.getElementById('tip').innerHTML = 'ipseak依赖加载失败！'
+  }
+</script>
+
                 </div>
 	    </div>
