--- a/say.html
+++ b/say.html
@@ -47,8 +47,8 @@
     ispeak
       .init({
         el: '#ispeak',
-        api: 'https://kkapi-dev.vercel.app/',
-        author: '61fe93508fd621d39a155725',
+        api: 'https://kkapi-open-fmkli.vercel.app/',
+        author: '62fb537eea70bbc9782bcf6d',
         pageSize: 10,
         loading_img: 'https://7.dusays.com/2021/03/04/d2d5e983e2961.gif',
         initCommentName: 'Discuss',
