--- a/say.html
+++ b/say.html
@@ -22,7 +22,7 @@
 />
 <link
   rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/ispeak@4.2.0/style.css"
+  href="https://unpkg.com/ispeak@4.2.0/style.css"
 />
 
 <style>
@@ -35,8 +35,8 @@
 </style>
 <script src="https://cdn.staticfile.org/highlight.js/10.6.0/highlight.min.js"></script>
 <script src="https://cdn.staticfile.org/marked/2.0.0/marked.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/discuss/dist/Discuss.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/ispeak@4.2.0/ispeak.umd.js"></script>
+<script src="https://unpkg.com/discuss/dist/Discuss.js"></script>
+<script src="https://unpkg.com/ispeak@4.2.0/ispeak.umd.js"></script>
 <script>
   var head = document.getElementsByTagName('head')[0]
   var meta = document.createElement('meta')
@@ -50,10 +50,10 @@
         api: 'https://kkapi-open-fmkli.vercel.app/',
         author: '62fb537eea70bbc9782bcf6d',
         pageSize: 10,
-        loading_img: 'https://7.dusays.com/2021/03/04/d2d5e983e2961.gif',
-        initCommentName: 'Discuss',
+        loading_img: 'https://www.imfmkli.top/pigen.png',
+        initCommentName: '',
         initCommentOptions: {
-          serverURLs: 'https://kkdiscuss.vercel.app/'
+          serverURLs: ''
         }
       })
       .then(function () {
