--- a/say.html
+++ b/say.html
@@ -61,7 +61,7 @@
         document.getElementById('tip').style.display = 'none'
       })
   } else {
-    document.getElementById('tip').innerHTML = 'ipseak依赖加载失败！'
+    document.getElementById('tip').innerHTML = 'ispeak依赖加载失败！'
   }
 </script>
 
