--- a/say.html
+++ b/say.html
@@ -11,7 +11,7 @@
                 <div class="mdui-card-primary">
                     <div class="mdui-card-primary-title">说说</div>
                 </div>
-
+		<h1>其实呢，说说评论摆烂了，加载速度较慢</h1>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
 <div id="tip" style="text-align:center;">ipseak加载中</div>
