--- a/say.html
+++ b/say.html
@@ -51,9 +51,9 @@
         author: '62fb537eea70bbc9782bcf6d',
         pageSize: 10,
         loading_img: 'https://www.imfmkli.top/pigen.png',
-        initCommentName: '',
+        initCommentName: 'waline',
         initCommentOptions: {
-          serverURLs: ''
+          serverURLs: 'https://waline.imfmkli.top'
         }
       })
       .then(function () {
