--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <h3>公告</h3>
                         <ul>
                             <li>留言板及说说的入口已经搬迁到抽屉栏</li>
-                            <li>V我50！ <a href="https://www.vwo50.com/donate/xGRuJ">https://www.vwo50.com/donate/xGRuJ</a></li>
+                            <li>V我money！ <a href="https://dun.mianbaoduo.com/@fmkli">https://dun.mianbaoduo.com/@fmkli</a></li>
                         </ul>
                         <hr>
                         <h3>链接大全--主要</h3>
