--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                             <br><span id="lasttime2">载入倒计时...</span>
                             <br>Friend Links：<a href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a href="https://boblive.vercel.app/">BOB实况</a>--<a href="https://www.zxqblog.cn/">小钊的博客</a>
                             <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
+                            <br>攻击网站的司马
                         </div>
                     </div>
                     <div class="center" id="posts-list">
