--- a/say.html
+++ b/say.html
@@ -47,7 +47,7 @@
     ispeak
       .init({
         el: '#ispeak',
-        api: 'https://kkapi-open-fmkli.vercel.app/',
+        api: 'https://kkapi.imfmkli.top/',
         author: '62fb537eea70bbc9782bcf6d',
         pageSize: 10,
         loading_img: 'https://www.imfmkli.top/pigen.png',
