--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                             <li>目前没有正在学习的东西~（</li>
                             <li>你可以通过邮箱 fmkli2#qq.com （# =&gt; @）或者通过 QQ 号：二零五八二六四六八五 来联系我，其他社区の账号已在主页侧边栏内</li>
                             <li>我开网站已经有了两年啦~</li>
+                            <li>开学后只在 周五、周六、周日 上线</li>
                         </ul>
                         <hr>
                         <h3>公告</h3>
