--- a/index.html
+++ b/index.html
@@ -120,22 +120,26 @@
                 <!-- 盒子2 -->
                 <div class="right">
                     <div id="nopost">
-                        <h3>About</h3>
-                        <ul>
-                            <li>我是Fmkli，一只鸽鸽子，咕了很久</li>
-                            <li>啥都学不会，只会一点点HTML / CSS / JavaScript</li>
-                            <li>目前没有正在学习的东西~（</li>
-                            <li>你可以通过邮箱 fmkli2#qq.com （# =&gt; @）或者通过 QQ 号：二零五八二六四六八五 来联系我，其他社区の账号已在主页侧边栏内</li>
-                            <li>我开网站已经有了两年啦~</li>
-                            <li>开学后只在 周五、周六、周日 上线</li>
-                        </ul>
-                        <hr>
-                        <h3>公告</h3>
-                        <ul>
-                            <li>留言板及说说的入口已经搬迁到抽屉栏</li>
-                            <li>V我money！ <a href="https://dun.mianbaoduo.com/@fmkli">https://dun.mianbaoduo.com/@fmkli</a></li>
-                        </ul>
+                        <div id="nolianjie">
+                            
+                            <h3>About</h3>
+                            <ul>
+                                <li>我是Fmkli，一只鸽鸽子，咕了很久</li>
+                                <li>啥都学不会，只会一点点HTML / CSS / JavaScript</li>
+                                <li>目前没有正在学习的东西~（</li>
+                                <li>你可以通过邮箱 fmkli2#qq.com （# =&gt; @）或者通过 QQ 号：二零五八二六四六八五 来联系我，其他社区の账号已在主页侧边栏内</li>
+                                <li>我开网站已经有了两年啦~</li>
+                                <li>开学后只在 周五、周六、周日 上线</li>
+                            </ul>
 
+                            <hr>
+                            <h3>公告</h3>
+                            <ul>
+                                <li>留言板及说说的入口已经搬迁到抽屉栏</li>
+                                <li>V我money！ <a href="https://dun.mianbaoduo.com/@fmkli">https://dun.mianbaoduo.com/@fmkli</a></li>
+                            </ul>
+
+                        </div>
                         <div class="lianjie23" id="lianjie24" style="display: none;">
                             <h3>链接大全--主要</h3>
                             <a href="https://blog.imfmkli.top/" class="lianjie"><svg t="1659884404546" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="659" width="64" height="64"><path d="M996.117 396.181c-21.546-9.237-113.92 1.024-139.584-22.229-18.133-16.768-19.285-47.125-26.346-87.595-11.84-67.776-16.768-83.136-29.078-109.824C756.267 81.43 648.896 0 551.34 0H325.205C147.285 0 1.877 145.75 1.877 323.648v377.387C1.877 878.592 147.285 1024 325.205 1024h371.542c177.92 0 322.282-145.408 323.328-322.987l2.048-261.376s0-32.298-26.006-43.456zM320 256h170.667a64 64 0 0 1 0 128H320a64 64 0 0 1 0-128z m384 512H320a64 64 0 1 1 0-128h384a64 64 0 1 1 0 128z" fill="#FF6600" p-id="660"></path></svg><br>Blog</a>
