--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
 
         <!-- 网站 主要内容-->
         <div class="background">
+            <div class="upupzuiup">
+                <div class="caidananniu" id="caidananniu" onclick="openright();">
+                    More
+                </div>
+                <div class="upupzuiup-text">
+                    鸽子主页
+                </div>
+            </div>
             <div class="shuanglan">
                 <!-- 盒子1 -->
                 <div class="left">
@@ -106,7 +114,7 @@
                 <!-- 盒子1.End-->
 
                 <!-- 盒子2 -->
-                <div class="right">
+                <div class="right" id="rightcard" style="display: none;">
 
                     <div class="center" id="wenzhangrukou">
                         <p>Blogの文章</p>
