--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                 <div class="upupzuiup-text">
                     鸽子主页
                 </div>
+                <div class="qitaanniu" id="caidananniu" onclick="openqita();">
+                    一言
+                </div>
             </div>
             <div class="shuanglan">
                 <!-- 盒子1 -->
