--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="shuanglan">
                 <!-- 盒子1 -->
-                <div class="left">
+                <div class="left" id="leftcard">
 
                     <img class="headimg" src="./image/username.png" alt="Fmkli">
 
